Test/linarith.expected
Test/linarith.lean:10:0: error: application type mismatch
  @Smt.Reconstruct.Real.int_tight_ub 1
argument has type
  ℤ
but function has type
  ∀ {c : ℝ} {i : ℤ}, ↑i < c → i ≤ ⌊c⌋
Test/linarith.lean:19:0: error: application type mismatch
  @Smt.Reconstruct.Real.int_tight_ub 0
argument has type
  ℤ
but function has type
  ∀ {c : ℝ} {i : ℤ}, ↑i < c → i ≤ ⌊c⌋
Test/linarith.lean:22:0: error: application type mismatch
  @Smt.Reconstruct.Real.int_tight_ub 0
argument has type
  ℤ
but function has type
  ∀ {c : ℝ} {i : ℤ}, ↑i < c → i ≤ ⌊c⌋
Test/linarith.lean:34:9: warning: unused variable `e`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:53:0: warning: declaration uses 'sorry'
Test/linarith.lean:102:2: error: application type mismatch
  1 ≥ 0
argument
  0
has type
  ℤ : Type
but is expected to have type
  ℝ : Type
Test/linarith.lean:107:2: error: application type mismatch
  1 ≥ 0
argument
  0
has type
  ℤ : Type
but is expected to have type
  ℝ : Type
Test/linarith.lean:118:60: warning: unused variable `h3`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:125:9: warning: unused variable `a`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:125:13: warning: unused variable `c`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:168:34: warning: unused variable `z`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:169:5: warning: unused variable `h5`
note: this linter can be disabled with `set_option linter.unusedVariables false`
Test/linarith.lean:173:0: error: application type mismatch
  @Smt.Reconstruct.Real.int_tight_ub 0
argument has type
  ℤ
but function has type
  ∀ {c : ℝ} {i : ℤ}, ↑i < c → i ≤ ⌊c⌋
